--- a/www/index.html
+++ b/www/index.html
@@ -19,19 +19,19 @@
           </h2>
           <br>
           <h2>
-            you have reached a placeholder site
+            you have reached a placeholder site, but anyway
           </h2>
           <br>
           <h2>
-            for the time being – hi. i am jan. i am a video producer.
+            hi. i am jan.<br>i am a video producer.
           </h2>
           <br>
           <h2>
-            if you want trailer for your game you can contact me via <a href="mailto:hi@jnsz.cz">hi@jnsz.cz</a></h2>
+            if you want a trailer for your game you can contact me via <a href="mailto:hi@jnsz.cz">hi@jnsz.cz</a></h2>
           </h2>
           <br>
           <h2>
-            thank you for checking this barren website. i appriciate it.
+            thank you for checking out this barren website. i appreciate it.
           </h2>
           <br>
           <h2>
