--- a/cv/index.html
+++ b/cv/index.html
@@ -27,7 +27,7 @@
       <div class="col pt-3 pb-5">
         <h1>Jan <strong>Szlauer</strong></h1>
         <h4>
-          <a href="mailto:janszlauer@gmail.com">janszlauer@gmail.com
+          <a target="_blank" href="mailto:janszlauer@gmail.com">janszlauer@gmail.com
           </a>
         </h4>
       </div>
@@ -48,7 +48,7 @@
           <div class="card mb-3" id="kaco">
             <div class="card-body">
               <h3 class="card-title"><strong>
-                  <a class="link" href="https://www.kacofilms.com/">Kaco films</a>
+                  <a class="link" target="_blank" href="https://www.kacofilms.com/">Kaco films</a>
                   <span class="date"><small>7/2016 – current</small></span>
                 </strong></h3>
               <h2 class="card-subtitle mb-2 text-muted">
@@ -104,7 +104,7 @@
           <div class="card mb-3" id="gamer-pie">
             <div class="card-body">
               <h3 class="card-title"><strong>
-                  <a class="link" href="http://www.gamerpie.wtf/">Gamer Pie</a>
+                  <a class="link" target="_blank" href="http://www.gamerpie.wtf/">Gamer Pie</a>
                   <span class="date"><small>6/2016 – current</small></span>
                 </strong></h3>
               <h2 class="card-subtitle mb-2 text-muted">
@@ -151,7 +151,7 @@
           <div class="card mb-3" id="fffi">
             <div class="card-body">
               <h3 class="card-title"><strong>
-                  <a class="link" href="http://festival.fi.muni.cz">Film Festival <abbr title="Faculty of Informatics Masaryk University">FI MU</abbr></a>
+                  <a class="link" target="_blank" href="http://festival.fi.muni.cz">Film Festival of <abbr title="Faculty of Informatics Masaryk University">FI MU</abbr></a>
                   <span class="date"><small>9/2014 – 2/2017</small></span>
                 </strong></h3>
               <h2 class="card-subtitle mb-2 text-muted">
@@ -163,7 +163,7 @@
           <div class="card mb-3" id="khk">
             <div class="card-body">
               <h3 class="card-title"><strong>
-                  <a class="link" href="http://www.know-how-klub.cz/">Know How Klub</a>
+                  <a class="link" target="_blank" href="http://www.know-how-klub.cz/">Know How Klub</a>
                   <span class="date"><small>9/2015 – 9/2016</small></span>
                 </strong></h3>
               <h2 class="card-subtitle mb-2 text-muted">
@@ -212,16 +212,23 @@
                   Video production
                 </strong></h2>
               <p class="card-text">
-                Strong knowledge of Premiere Pro and After Effects. <br>
-                Good knowledge of the rest of the Creative Cloud. <br>
-                Experience with shooting (mainly on Canon DSLR cameras), 2D animation and motion graphics.
+                Strong knowledge of editing using Premiere Pro. <br>
+                Good knowledge of After Effects, 2D animanion and motion graphics.<br>
+                Experience with shooting videos on DSLR cameras.
+              </p>
+
+              <h2 class="card-title"><strong>
+                  Graphic design
+                </strong></h2>
+              <p class="card-text">
+                Good knowledge of Photoshop, Illustrator and InDesign.<br>
               </p>
 
               <h2 class="card-title"><strong>
                   Game development
                 </strong></h2>
               <p class="card-text">
-                Good knowledge of Unity and C#. See <a href="#game-projects">game projects</a>. <br>
+                Good knowledge of Unity and C#. <br>
                 Basic knowledge of 3D modeling in 3DS Max and Cinema 4D.
               </p>
 
@@ -230,8 +237,7 @@
                 </strong></h2>
               <p class="card-text">
                 Good knowledge of client-side application development with JavaScript (ES6+). <br>
-                Experience working with Node.js, NPM, React, SASS, Bootstrap, Babel, Webpack, d3.js and others. <br>
-                See <a cladd="link" href="#other-projects">other projects</a>.
+                Experience working with Node.js, NPM, React, SASS, Bootstrap, Babel, Webpack, d3.js and others.
               </p>
 
               <h2 class="card-title"><strong>
@@ -252,13 +258,13 @@
           <div class="card">
             <div class="card-body">
               <p class="card-title">
-                <a class="link" href="https://game-access.com/"><strong>Game Access 18’</strong></a>, Brno<span class="date">6/2018</span>
+                <a class="link" target="_blank" href="https://game-access.com/"><strong>Game Access 18’</strong></a>, Brno<span class="date">6/2018</span>
               </p>
               <p class="card-title">
-                <a class="link" href="http://www.gdsession.com/"><strong>GDS 2017</strong></a>, Prague <span class="date">11/2017</span>
+                <a class="link" target="_blank" href="http://www.gdsession.com/"><strong>GDS 2017</strong></a>, Prague <span class="date">11/2017</span>
               </p>
               <p class="card-title">
-                <a class="link" href="https://game-access.com/"><strong>Game Access 17’</strong></a>, Brno <span class="date">5/2017</span>
+                <a class="link" target="_blank" href="https://game-access.com/"><strong>Game Access 17’</strong></a>, Brno <span class="date">5/2017</span>
               </p>
             </div>
           </div>
@@ -294,7 +300,7 @@
                       </a>
                       <span class="date">2016</span>
                     </strong></h2>
-                  <p class="card-text">Video for <a class="link" href="https://www.ics.muni.cz/">UVT MU</a> promoting their work. I was tasked with creating short video based on graphics and data form their <a class="link" href="https://www.ics.muni.cz/media/3119304/uvt_vyrocni_zprava_2015.pdf">annual report</a>.</p>
+                  <p class="card-text">Video for <a class="link" target="_blank" href="https://www.ics.muni.cz/">UVT MU</a> promoting their work. I was tasked with creating short video based on graphics and data form their <a target="_blank" class="link" href="https://www.ics.muni.cz/media/3119304/uvt_vyrocni_zprava_2015.pdf">annual report</a>.</p>
                 </div>
               </div>
 
@@ -327,7 +333,7 @@
                       </a>
                       <span class="date">2016</span>
                     </strong></h2>
-                  <p class="card-text">Promo video for <a class="ling" href="https://czs.muni.cz/">CZS MU</a>'s event. I was tasked with creating promo using graphics made for poster.</p>
+                  <p class="card-text">Promo video for <a class="ling" target="_blank" href="https://czs.muni.cz/">CZS MU</a>'s event. I was tasked with creating promo using graphics made for poster.</p>
                 </div>
               </div>
 
@@ -360,7 +366,7 @@
                       </a>
                       <span class="date">2016</span>
                     </strong></h2>
-                  <p class="card-text">Video for RAQUEL research project. I co-authored concept and script and made all graphics and all animations in the video.</p>
+                  <p class="card-text">Video for RAQUEL research project. I co-authored concept and script and made all graphics and animation in the video.</p>
                 </div>
               </div>
 
@@ -453,6 +459,7 @@
         <!-- GAME PROJECTS -->
         <div>
           <h2 id="game-projects">GAME PROJECTS</h2>
+
           <div class="card">
             <div class="card-body">
               <p class="card-text">
@@ -460,23 +467,24 @@
               </p>
             </div>
           </div>
+
           <div class="card">
             <div class="card-body">
               <h2 class="card-title mb-1"><strong>
-                  <a class="link" href="https://bearinyourheart.itch.io/matchmaker-in-heaven">Matchmaker in Heaven</a></strong> <small><em>browser playable</em></small><strong>
+                  <a class="link" target="_blank" href="https://bearinyourheart.itch.io/matchmaker-in-heaven">Matchmaker in Heaven</a></strong> <small><em>browser playable</em></small><strong>
                   <span class="date">2019</span>
                 </strong></h2>
-              <p class="card-text">Made during <a class="link" href="https://itch.io/jam/gmtk-2019">GMTK Game Jam</a>. It's Papers, please meets Tinder.</p>
+              <p class="card-text">Made during <a class="link" target="_blank" href="https://itch.io/jam/gmtk-2019">GMTK Game Jam</a>. It's Papers, please meets Tinder.</p>
             </div>
           </div>
           <div class="card">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title mb-1"><strong>
-                    <a class="link" href="https://bearinyourheart.itch.io/desert-trucking-simulator">Desert Trucking Simulator</a></strong> <small><em>browser playable</em></small><strong>
+                    <a class="link" target="_blank" href="https://bearinyourheart.itch.io/desert-trucking-simulator">Desert Trucking Simulator</a></strong> <small><em>browser playable</em></small><strong>
                     <span class="date">2019</span>
                   </strong></h2>
-                <p class="card-text">Prototype of a game where story is written using <a class="link" href="https://www.inklestudios.com/ink/">Ink</a> and decision points automatically generate forks in the road.</p>
+                <p class="card-text">Prototype of a game where story is written using <a class="link" target="_blank" href="https://www.inklestudios.com/ink/">Ink</a> and decision points automatically generate forks in the road.</p>
               </div>
             </div>
             <div class="card">
@@ -492,17 +500,17 @@
               <div class="card">
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
-                      <a class="link" href="https://tondafs.itch.io/red-dot">Red Dot</a>
+                      <a class="link" target="_blank" href="https://tondafs.itch.io/red-dot">Red Dot</a>
                       <span class="date">2018</span>
                     </strong></h2>
-                  <p class="card-text">Made during <a class="link" href="https://itch.io/jam/gmtk-2018">GMTK Game Jam</a>. You need to feed your cat, but you are too lazy to get off the couch. Luckily there is your trusty laser pointer.</p>
+                  <p class="card-text">Made during <a class="link" target="_blank" href="https://itch.io/jam/gmtk-2018">GMTK Game Jam</a>. You need to feed your cat, but you are too lazy to get off the couch. Luckily there is your trusty laser pointer.</p>
                 </div>
               </div>
               <div class="card">
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
 
-                      <a class="link" href="https://tondafs.itch.io/project-time-squared">Project Time Squared</a>
+                      <a class="link" target="_blank" href="https://tondafs.itch.io/project-time-squared">Project Time Squared</a>
 
                       <span class="date">2018</span>
                     </strong></h2>
@@ -513,18 +521,18 @@
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
 
-                      <a class="link" href="https://globalgamejam.org/2018/games/mucha">Mucha</a>
+                      <a class="link" target="_blank" href="https://globalgamejam.org/2018/games/mucha">Mucha</a>
 
                       <span class="date">2018</span>
                     </strong></h2>
-                  <p class="card-text">Made during <a class="link" href="https://globalgamejam.org/">Global Game Jam</a>. Decipher mysterious signals that are the last remnants of an ancient race.</p>
+                  <p class="card-text">Made during <a class="link" target="_blank" href="https://globalgamejam.org/">Global Game Jam</a>. Decipher mysterious signals that are the last remnants of an ancient race.</p>
                 </div>
               </div>
               <div class="card">
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
 
-                      <a class="link" href="https://tondafs.itch.io/francesco-zhabikuch">Francesco Zhabikuch</a>
+                      <a class="link" target="_blank" href="https://tondafs.itch.io/francesco-zhabikuch">Francesco Zhabikuch</a>
 
                       <span class="date">2016</span>
                     </strong></h2>
@@ -535,7 +543,7 @@
               <div class="card">
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
-                      <a class="link" href="http://ojoch.cz/">OJOCH</a>
+                      <a class="link" target="_blank" href="http://ojoch.cz/">OJOCH</a>
                       <span class="date">2016</span>
                     </strong></h2>
 
@@ -551,7 +559,7 @@
               <div class="card">
                 <div class="card-body">
                   <h2 class="card-title mb-1"><strong>
-                      <a class="link" href="https://jnsz.github.io/graph-app/">Web Application for Visualization of Static Graphs</a>
+                      <a class="link" target="_blank" href="https://jnsz.github.io/graph-app/">Web Application for Visualization of Static Graphs</a>
 
                       <span class="date">2017</span>
                     </strong></h2>
@@ -601,7 +609,7 @@
 
                           <span class="date">2016</span>
                         </strong></h2>
-                      <p class="card-text">Typeface designed when I was a member of <a class="link" href="https://agdm.fi.muni.cz/">Studio of Graphic Design and Multimedia</a>. It's made out of imposible geometric shapes and it's the only typeface of its type with full czech diacritic support.</p>
+                      <p class="card-text">Typeface designed when I was a member of <a class="link" target="_blank" href="https://agdm.fi.muni.cz/">Studio of Graphic Design and Multimedia</a>. It's made out of imposible geometric shapes and it's the only typeface of its type with full czech diacritic support.</p>
                     </div>
                   </div>
 
@@ -625,12 +633,10 @@
                       Graphic Design and Typesetting
                       <span class="date">2016</span>
                     </strong></h2>
-                  <p class="card-text">Examples of graphic and typographic works for school assigments.<br>
-                    &emsp;design of <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=js.pdf">personal brand logo and graphic charter</a>;<br>
-                    &emsp;styling and typesetting of a <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=urbex.pdf">book</a>;<br>
-                    &emsp;design of series of <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=witcher.pdf">book covers</a>.<br>
-
-                    </ul>
+                  <p class="card-text">Graphic and typographic works for school assigments.<br>
+                    — Design of <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=js.pdf">personal brand logo and graphic charter</a>.<br>
+                    — Styling and typesetting of a <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=urbex.pdf">book</a>.<br>
+                    — Design of series of <a class="link" target="_blank" href="/pdfjs/web/viewer.html?file=witcher.pdf">book covers</a>.<br>
                   </p>
                 </div>
               </div>
@@ -647,7 +653,7 @@
 
           <p>
             Thank you for reading through. I appriciate it. <br>
-            Best way to reach me is via <a href="mailto:janszlauer@gmail.com">janszlauer@gmail.com</a>.
+            Best way to reach me is via <a target="_blank" href="mailto:janszlauer@gmail.com">janszlauer@gmail.com</a>.
           </p>
           <p>
             <a class="link" alt="Back to top." href="#"><i class="fas fa-chevron-up fa-lg fa-fw"></i></a>
@@ -658,11 +664,11 @@
 
       <!-- VIDEO MODAl -->
       <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-body">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always" allow="autoplay"></iframe>
+                <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always" allow="autoplay" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
               </div>
             </div>
           </div>
@@ -681,7 +687,7 @@
             $videoSrc = $(this).data("src");
           });
           $('#videoModal').on('shown.bs.modal', function(e) {
-            $("#video").attr('src', $videoSrc + "?autoplay=1&amp;modestbranding=1&amp;showinfo=0");
+            $("#video").attr('src', $videoSrc + "?autoplay=1&amp;modestbranding=1&amp;showinfo=0;rel=0");
           })
           $('#videoModal').on('hide.bs.modal', function(e) {
             $("#video").attr('src', $videoSrc);
