--- a/www/index.html
+++ b/www/index.html
@@ -306,36 +306,63 @@
         <!-- SKILLS -->
         <div>
           <h2>GAME CREDITS</h2>
-          <div class="card mb-3">
-            <div class="card-body" id="skills">
-              <h2 class="card-title">
-                <strong>Last Train Home</strong> (2023)
+          <div class="card">
+            <div class="card-body" id="credits">
+              <img class="img-fluid" src="./img/LTH.jpg" alt="">
+              <h4 class="card-title">
+                <strong>
+                  Last Train Home
+                </strong> 
+                <span class="date">
+                  2023
+                </span>
                 </br>
                 <small>
                   UI/UX Designer
                 </small>
-              </h2>
-              <h2 class="card-title">
-                <strong>Last Train Home – Legion Tales DLC</strong> (2024)
+              </h4>
+
+              <img class="img-fluid" src="./img/LTHLG.jpg" alt="">
+              <h4 class="card-title">
+                <strong>
+                  Legion Tales DLC
+                </strong> 
+                <span class="date">
+                  2024
+                </span>
                 </br>
                 <small>
                   UI/UX Designer
                 </small>
-              </h2>
-              <h2 class="card-title">
-                <strong>Comanche</strong> (2021)
+              </h4>
+
+              <img class="img-fluid" src="./img/comanche.jpg" alt="">
+              <h4 class="card-title">
+                <strong>
+                  Comanche
+                </strong> 
+                <span class="date">
+                  2021
+                </span>
                 </br>
                 <small>
                   UI/UX Designer
                 </small>
-              </h2>
-              <h2 class="card-title">
-                <strong>Vigor</strong> (2019)
+              </h4>
+
+              <img class="img-fluid" src="./img/vigor.jpg" alt="">
+              <h4 class="card-title">
+                <strong>
+                  Vigor
+                </strong> 
+                <span class="date">
+                  2019
+                </span>
                 </br>
                 <small>
                   Marketing Graphics Designer
                 </small>
-              </h2>         
+              </h4>         
             </div>
           </div>
 
